--- a/SimTECH/SimTECH/Pages/Racing/SeasonConfirm.razor
+++ b/SimTECH/SimTECH/Pages/Racing/SeasonConfirm.razor
@@ -20,7 +20,7 @@
     [Parameter]
     public Season? Season { get; set; }
 
-    private async Task Submit()
+    private void Submit()
     {
         SeasonDialog?.Close(DialogResult.Ok(Season));
     }
