--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -10,48 +10,44 @@
         <MudText Typo="Typo.h4">Leagues</MudText>
         <MudButton Variant="Variant.Text" Color="Color.Success" OnClick="AddLeague">New</MudButton>
     </MudPaper>
-    <MudDataGrid T="League" Items="@leagueData" ReadOnly="@_readOnly" EditMode="DataGridEditMode.Cell" CommittedItemChanges="ModifyLeague"
-                Bordered="true" Dense="true" EditTrigger="DataGridEditTrigger.OnRowClick">
-        <Columns>
-            <Column T="League" Field="Name" />
-            <Column T="League" Field="State" IsEditable="false" />
-            @*<Column T="League" CellClass="d-flex justify-end">
-                <CellTemplate>
-                    <MudButtonGroup>
-                        <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@context.Actions.StartEditingItem" />
-                    </MudButtonGroup>
-                </CellTemplate>
-            </Column>*@
-        </Columns>
-        <PagerContent>
-            <MudDataGridPager T="League" />
-        </PagerContent>
-    </MudDataGrid>
+    <MudTable Items="@leagueData" Loading="_loading" LoadingProgressColor="Color.Info" Bordered="true">
+        <HeaderContent>
+            <MudTh>Name</MudTh>
+            <MudTh>State</MudTh>
+            <MudTh></MudTh>
+        </HeaderContent>
+        <RowTemplate>
+            <MudTd>@context.Name</MudTd>
+            <MudTd>@context.State</MudTd>
+            <MudTd Class="d-flex justify-end">
+                <MudButtonGroup>
+                    <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateLeague(context))" />
+                </MudButtonGroup>
+            </MudTd>
+        </RowTemplate>
+    </MudTable>
 </MudContainer>
 
 @code {
-    private bool _readOnly = false;
-    private List<League> leagueData = new();
+    private bool _loading = true;
+    private IEnumerable<League> leagueData = new List<League>();
 
     protected override async Task OnInitializedAsync()
     {
         leagueData = await LeagueService.GetLeagues();
+        _loading = false;
     }
 
-    // TODO: If you want this modify to work, then use the edit model to display values and output them too
-    async Task ModifyLeague(League item)
+    async Task AddLeague() => await UpdateLeague(new League());
+    async Task UpdateLeague(League item)
     {
-        await LeagueService.UpdateLeague(item);
-    }
+        var parameters = new DialogParameters { ["League"] = (item) };
 
-    async Task AddLeague()
-    {
-        var dialog = await DialogService.ShowAsync<LeagueEditor>("Create a new league");
+        var dialog = await DialogService.ShowAsync<LeagueEditor>("Modify League", parameters);
         var result = await dialog.Result;
 
-        if (!result.Canceled && result.Data != null && result.Data is League newLeague)
-        {
-            leagueData.Add(newLeague);
-        }
+        if (!result.Canceled && result.Data != null && result.Data is League updatedLeague)
+            await LeagueService.UpdateLeague(updatedLeague);
+
     }
 }
