Added editors and editing is setup at engine level

--- a/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Leagues.razor
@@ -49,7 +49,9 @@
         var result = await dialog.Result;
 
         if (!result.Canceled && result.Data != null && result.Data is League updatedLeague)
+        {
             await LeagueService.UpdateLeague(updatedLeague);
-
+            LeagueData = await LeagueService.GetLeagues();
+        }
     }
 }
